# python_2026test

./: README.md  main.py  pyproject.toml
0516/: lesson2.ipynb  lesson3.ipynb
0523/: lesson1.ipynb  lesson2.ipynb  lesson3.py  lesson4.py  lesson4_2.py  pyproject.toml
0530/: lesson1.ipynb  lesson2_T.ipynb  lesson3.ipynb  lesson3_1.ipynb  lesson3_2.py  lesson3_T.ipynb  lesson4.ipynb
0606/: lesson1.py  lesson1_2.ipynb  lesson2.py  lesson3.py  lesson4_1.py  lesson4_T.py  youbike_data.csv
0613/: lesson1.py  lesson1_1.ipynb  lesson2_T.py  lesson3.ipynb  lesson3_T.ipynb  lesson3_T1.ipynb  lesson4.py
0627/: lesson1.ipynb  lesson2.ipynb  lesson3.ipynb  lesson4.ipynb  lesson5.ipynb  lesson5_T.py  lesson6.ipynb  lessonhw.ipynb
0704/: lesson2.ipynb  lesson3.ipynb  lesson4.ipynb  lesson5_C_T1.py  lesson5_C_T2.py  practice1.ipynb
0710test/: sop_v1.py  sop_v2.py  sop_v3.py
0718/: practice1.ipynb  practice2.ipynb  practice4.ipynb  practive3.ipynb  students.csv
