[project]
name = "python-2026test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.10.3",
    "reportlab>=4.5.1",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "yfinance>=1.2.0",
]
